--- a/Dockerfile-Pi
+++ b/Dockerfile-Pi
@@ -4,28 +4,20 @@ ENV TZ=Europe/London
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update \
- && apt-get install -y sudo
- 
-RUN sudo apt-get -y install avahi-daemon
+ && apt-get install -y sudo \
+ && apt-get install -y avahi-daemon \
+ && apt-get install -y git
 
-RUN adduser --disabled-password --gecos '' wirepod
-RUN adduser wirepod sudo
-RUN echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+RUN adduser --disabled-password --gecos '' wirepod \
+ && adduser wirepod sudo \
+ && echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 USER wirepod
 
-RUN sudo apt-get update && sudo apt-get install -y git
-RUN sudo mkdir /wire-pod
-RUN sudo chown -R wirepod:wirepod /wire-pod
+RUN mkdir /home/wirepod/wire-pod \
+ && cd /home/wirepod/wire-pod \
+ && git clone https://github.com/kercre123/wire-pod.git .
 
-RUN cd /wire-pod
-RUN git clone https://github.com/kercre123/wire-pod/ wire-pod
+WORKDIR /home/wirepod/wire-pod
 
-WORKDIR /wire-pod
-
-CMD sudo STT=vosk ./setup.sh
-
-WORKDIR /wire-pod/chipper
-
-CMD sudo ./setup.sh
-CMD sudo ./start.sh
+CMD sudo STT=vosk ./setup.sh && sudo ./chipper/setup.sh && sudo ./chipper/start.sh
